<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.romiis</groupId>
    <artifactId>EqualLib-Playground</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>EqualLibPlayground</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
    </properties>

    <!-- ========================================================= -->
    <!-- =                     Dependencies                       = -->
    <!-- ========================================================= -->
    <dependencies>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>

        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17.0.6</version>
        </dependency>

        <!-- Log4j 2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.24.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.24.3</version>
        </dependency>

        <!-- Other UI libs -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Optional extras -->
        <dependency>
            <groupId>com.jcabi</groupId>
            <artifactId>jcabi-log</artifactId>
            <version>0.17.1</version>
        </dependency>
        <dependency>
            <groupId>com.romiis</groupId>
            <artifactId>EqualLib</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.2</version>
        </dependency>
    </dependencies>

    <!-- ========================================================= -->
    <!-- =                       Build                            = -->
    <!-- ========================================================= -->
    <build>
        <!-- standard resources –zabalené doJARu -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <!-- Kompilátor -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.34</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- JavaFX (jlink) -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <id>create-runtime-image</id>
                        <goals><goal>jlink</goal></goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.romiis.equallib_playground.MainClass</mainClass>
                    <launcher>EqualLibPlayground</launcher>

                    <!-- výstup -->
                    <jlinkImageName>EqualLib-Playground</jlinkImageName>
<!--                    <jlinkZipName>EqualLib-Playground</jlinkZipName>-->

                    <options>
                        <option>--add-modules</option><option>ALL-MODULE-PATH</option>
                        <!-- EqualLibPlayground -->
                        <option>--add-opens=java.base/java.util=EqualLibPlayground</option>
                        <option>--add-opens=java.base/java.lang=EqualLibPlayground</option>
                        <option>--add-opens=java.base/java.security=EqualLibPlayground</option>
                        <option>--add-opens=java.base/java.util.concurrent=EqualLibPlayground</option>
                        <option>--add-opens=java.base/java.io=EqualLibPlayground</option>
                        <option>--add-opens=java.base/jdk.internal.reflect=EqualLibPlayground</option>
                        <option>--add-opens=java.base/java.lang.ref=EqualLibPlayground</option>
                        <option>--add-opens=java.base/jdk.internal.misc=EqualLibPlayground</option>
                        <!-- EqualLib -->
                        <option>--add-opens=java.base/java.util=EqualLib</option>
                        <option>--add-opens=java.base/java.lang=EqualLib</option>
                        <option>--add-opens=java.base/java.security=EqualLib</option>
                        <option>--add-opens=java.base/java.util.concurrent=EqualLib</option>
                        <option>--add-opens=java.base/java.io=EqualLib</option>
                        <option>--add-opens=java.base/jdk.internal.reflect=EqualLib</option>
                        <option>--add-opens=java.base/java.lang.ref=EqualLib</option>
                        <option>--add-opens=java.base/jdk.internal.misc=EqualLib</option>
                        <!-- Logs -->
                        <option>-Dlog4j2.enableJndiLookup=false</option>
                        <option>-Dlog4j2.disableJmx=true</option>
                    </options>

                    <stripDebug>true</stripDebug>
                    <noManPages>true</noManPages>
                    <noHeaderFiles>true</noHeaderFiles>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-classes-to-image</id>
                        <phase>package</phase>
                        <goals><goal>run</goal></goals>
                        <configuration>
                            <target>
                                <!-- source:   ${basedir}/classes -->
                                <!-- target:   ${project.build.directory}/app/bin/classes -->
                                <copy todir="${project.build.directory}/EqualLib-Playground/bin/classes">
                                    <fileset dir="${basedir}/classes" includes="**/*"/>
                                </copy>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Testy -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <argLine>
                        --add-opens=java.base/java.util=EqualLibPlayground
                        --add-opens=java.base/java.lang=EqualLibPlayground
                        --add-opens=java.base/java.security=EqualLibPlayground
                        --add-opens=java.base/java.util.concurrent=EqualLibPlayground
                        --add-opens=java.base/java.io=EqualLibPlayground
                        --add-opens=java.base/jdk.internal.reflect=EqualLibPlayground
                        --add-opens=java.base/java.lang.ref=EqualLibPlayground
                        --add-opens=java.base/jdk.internal.misc=EqualLibPlayground
                        --add-opens=java.base/java.util=EqualLib
                        --add-opens=java.base/java.lang=EqualLib
                        --add-opens=java.base/java.security=EqualLib
                        --add-opens=java.base/java.util.concurrent=EqualLib
                        --add-opens=java.base/java.io=EqualLib
                        --add-opens=java.base/jdk.internal.reflect=EqualLib
                        --add-opens=java.base/java.lang.ref=EqualLib
                        --add-opens=java.base/jdk.internal.misc=EqualLib
                    </argLine>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>dist-zip</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <!-- jméno ZIPu -->
                            <finalName>${project.artifactId}-${project.version}</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <!-- ukaž mu, kde je ten nový XML descriptor -->
                            <descriptors>
                                <descriptor>src/assembly/dist.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>
